# WeatherFeatcher

./: CMakeLists.txt  README.md
data/: config.json
src/: CMakeLists.txt  main.cpp
src/presenter/: weathercontroller.cpp  weathercontroller.h
src/services/: httpservice.cpp  httpservice.h  weatherconverter.cpp  weatherconverter.h
src/structures/: citycoordinate.cpp  citycoordinate.h  weatherinfo.cpp  weatherinfo.h
src/utils/: config.cpp  config.h
src/widgets/: weatherwidget.cpp  weatherwidget.h
